# vp-tree

./: README.md  stack.yaml  vp-tree.cabal
bench/memory/: Main.hs
src/Data/: MaxPQ.hs  VPTree.hs
src/Data/VPTree/: Build.hs  Draw.hs  Internal.hs  Query.hs  TestData.hs
test/: LibSpec.hs
test/Data/VPTree/: QuerySpec.hs
