name:                vp-tree
version:             0.1.0.0
synopsis:            Vantage Point Trees
description:         Vantage Point Trees enable fast nearest-neighbor queries in metric spaces
homepage:            https://github.com/ocramz/vp-tree
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2020 Marco Zocca
category:            Data, Data Mining, Data Structures, Machine Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.VPTree
  -- other-modules:       Data.MaxPQ
  build-depends:       base >= 4.7 && < 5
                     , boxes
                     , containers
                     , deepseq
                     , depq >= 0.3
                     , exceptions
                     , mtl
                     , mwc-probability
                     , primitive
                     , psqueues
                     , sampling
                     , transformers
                     , vector
                     , vector-algorithms

-- executable vp-tree
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , vp-tree

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , vp-tree
                     , hspec
                     , QuickCheck
                     , vector

source-repository head
  type:     git
  location: https://github.com/ocramz/vp-tree
