name:                vp-tree
version:             0.1.0.0
synopsis:            Vantage Point Trees
description:         Vantage Point Trees enable fast nearest-neighbor queries in metric spaces
homepage:            https://github.com/ocramz/vp-tree
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2020-2021 Marco Zocca
category:            Data, Data Mining, Data Structures, Machine Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.VPTree
                       Data.VPTree.Build
                       Data.VPTree.Query
                       Data.VPTree.Internal
                       Data.VPTree.Draw
                       Data.VPTree.TestData
  -- other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , boxes
                     -- , conduit
                     , containers
                     , deepseq
                     , depq >= 0.3
                     , exceptions
                     , mtl
                     , mwc-probability
                     , primitive
                     , psqueues
                     , sampling
                     , serialise
                     , transformers
                     , vector
                     , vector-algorithms
                       -- DEBUG
                     , hspec

-- executable vp-tree
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , vp-tree

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vp-tree
                     , hspec
                     , mwc-probability
                     , primitive
                     , QuickCheck
                     , vector

benchmark bench-memory
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench/memory
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , conduit
                     , containers
                     , deepseq
                     , vector
                     , weigh
  ghc-options:         -Wall
                       -rtsopts
                       -with-rtsopts=-T
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/ocramz/vp-tree
